# MolinAntro-Music

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_E2E.md  README_SOTA.md  SOTA_FEATURES_MANIFEST.md  SOTA_IMPLEMENTATION_PLAN.md  TDD-MolinAntro-DAW.md
.github/workflows/: ci.yml
cmake/: Version.cmake
docs/: ACME_SOTA_Features_2025.md  Qt6_GUI_Integration.md  VST3_SDK_Integration.md
docs/user/: INSTALLATION.md  QUICK_START.md
include/: Version.h.in
include/ai/: AIMastering.h  GPUAccelerator.h  MusicalAnalysis.h  SmartInstruments.h  VoiceCloning.h
include/cloud/: CloudCollaboration.h  WebSocketClient.h
include/core/: AudioBuffer.h  AudioEngine.h  Transport.h
include/dsp/: AudioFile.h  ConvolutionReverb.h  DemucsONNX.h  Effects.h  GPUAudioProcessor.h  NoiseReduction.h  SIMDProcessor.h  SpectralProcessor.h  StemSeparation.h
include/forensic/: ForensicAnalyzer.h
include/gui/: Qt6Components.h  Qt6MainWindow.h  Qt6Styles.h
include/instruments/: DrumMachine.h  Sampler.h  Synthesizer.h
include/midi/: MIDIEngine.h
include/plugins/: PluginFormats.h  PluginHost.h
include/sequencer/: PatternSequencer.h  SessionView.h  WarpEngine.h
include/spatial/: SpatialAudioEngine.h
include/ui/: Animation.h  Components.h  ConsoleUI.h  MainWindow.h  Preferences.h  TerminalUI.h  Theme.h
include/utils/: Crypto.h
scripts/: build.sh  download_models.sh  package.sh  package_release.sh  run_tests.sh
src/: CMakeLists.txt  demo_ai.cpp  demo_complete.cpp  demo_spectral.cpp  main.cpp
src/ai/: AIMastering.cpp  CMakeLists.txt  GPUAccelerator.cpp  MusicalAnalysis.cpp  SmartInstruments.cpp  VoiceCloning.cpp
src/cloud/: CMakeLists.txt  CloudCollaboration.cpp  WebSocketClient.cpp
src/core/: AudioBuffer.cpp  AudioEngine.cpp  CMakeLists.txt  Transport.cpp
src/dsp/: AudioFile.cpp  CMakeLists.txt  ConvolutionReverb.cpp  DemucsONNX.cpp  Effects.cpp  GPUAudioProcessor.cpp  NoiseReduction.cpp  SIMDProcessor.cpp  SpectralProcessor.cpp  StemSeparation.cpp
src/forensic/: ForensicAnalyzer.cpp
src/gui/: CMakeLists.txt  Qt6Components.cpp  Qt6MainWindow.cpp  Qt6Styles.cpp
src/instruments/: CMakeLists.txt  DrumMachine.cpp  Sampler.cpp  Synthesizer.cpp
src/midi/: CMakeLists.txt  MIDIEngine.cpp
src/plugins/: CMakeLists.txt  PluginHost.cpp  VST3Host.cpp
src/sequencer/: CMakeLists.txt  PatternSequencer.cpp  SessionView.cpp
src/spatial/: SpatialAudioEngine.cpp
src/ui/: Animation.cpp  CMakeLists.txt  Components.cpp  ConsoleUI.cpp  Preferences.cpp  TerminalUI.cpp  Theme.cpp
src/utils/: CMakeLists.txt  Crypto.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  CompleteWorkflowTest.cpp  PerformanceTest.cpp
tests/integration/: CMakeLists.txt  EngineTransportIntegrationTest.cpp  FileIOIntegrationTest.cpp
tests/unit/: AITests.cpp  AudioBufferTest.cpp  AudioEngineTest.cpp  AudioFileTest.cpp  CMakeLists.txt  CloudCollaborationTest.cpp  TransportTest.cpp  WarpEngineTest.cpp
